Se agrega manejo de excepciones globales y puntuales. Se añaden otras corrrecciones.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -25,9 +25,9 @@ spring.mail.host=smtp.gmail.com
 # SMTP server port.
 spring.mail.port=587
 # Login user of the SMTP server.
-spring.mail.username=doralisacr@gmail.com
+spring.mail.username= indicar dirección de correo
 # Login password of the SMTP server.
-spring.mail.password=qyfwycysvwlaonog
+spring.mail.password= indicar password
 # Default MimeMessage encoding.
 spring.mail.default-encoding=utf-8
 # Additional JavaMail session properties.
