--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,6 +5,7 @@ spring.datasource.url=jdbc:mysql://localhost:3306/bot_java_coach?serverTimezone=
 spring.datasource.username=root
 spring.datasource.password=0000
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+server.port=8090
 
 # --------------------------------------------------------
 # JPA properties
@@ -25,15 +26,15 @@ spring.mail.host=smtp.gmail.com
 # SMTP server port.
 spring.mail.port=587
 # Login user of the SMTP server.
-spring.mail.username=mail@gmail.com
+spring.mail.username=examplemailtp@gmail.com
 # Login password of the SMTP server.
-spring.mail.password=password
+spring.mail.password=cqjpedutxtbvbzyw
 # Default MimeMessage encoding.
 spring.mail.default-encoding=utf-8
 # Additional JavaMail session properties.
 spring.mail.properties.mail.smtp.auth=true
 # START TLS 。
-spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.enabqyfwycysvwlaonogle=true
 spring.mail.properties.mail.smtp.starttls.required=true
 # Timeout - REVISAR LOS QUE VIENEN ABAJO
 spring.mail.properties.mail.smtp.connectionTimeout=5000
